--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,12 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="./assets/css/foundation.css">
 </head>
 <body>
   <app-root>Loading...</app-root>
+
+  <script src="./assets/js/jquery.js"></script>
+  <script src="./assets/js/foundation.js"></script>
 </body>
 </html>
